Création de la DAO JDBC

--- a/pizzeria-app/boris-pizzeria-dao/pom.xml
+++ b/pizzeria-app/boris-pizzeria-dao/pom.xml
@@ -16,5 +16,9 @@
   		<groupId>${project.groupId}</groupId>
   		<artifactId>boris-pizzeria-model</artifactId>
   	</dependency>
+  	<dependency>
+  		<groupId>mysql</groupId>
+  		<artifactId>mysql-connector-java</artifactId>
+  	</dependency>
   </dependencies>
 </project>
