--- a/pizzeria-app/boris-pizzeria-console/pom.xml
+++ b/pizzeria-app/boris-pizzeria-console/pom.xml
@@ -46,13 +46,13 @@
  			<activeByDefault>true</activeByDefault>
  		</activation>
  		<properties>
- 			<typeDao>fr.pizzeria.dao.PizzaDaoFactoryList</typeDao>
+ 			<typeDao>fr.pizzeria.dao.DaoFactoryBDD</typeDao>
  		</properties>
  	</profile>
  	<profile>
  		<id>prod</id>
  		<properties>
- 			<typeDao>fr.pizzeria.dao.PizzaDaoFactoryFichier</typeDao>
+ 			<typeDao>fr.pizzeria.dao.DaoFactoryFichier</typeDao>
  		</properties>
  	</profile>
  </profiles>
