--- a/pizzeria-app/pom.xml
+++ b/pizzeria-app/pom.xml
@@ -42,7 +42,7 @@
 	    <dependency>
 	      <groupId>junit</groupId>
 	      <artifactId>junit</artifactId>
-	      <version>3.8.1</version>
+	      <version>4.12</version>
 	      <scope>test</scope>
 	    </dependency>
 	    <dependency>
@@ -55,6 +55,13 @@
 	    	<artifactId>boris-pizzeria-model</artifactId>
 	    	<version>${project.version}</version>
 	    </dependency>
+	    <dependency>
+    		<groupId>mysql</groupId>
+    		<artifactId>mysql-connector-java</artifactId>
+   		 	<version>5.1.40</version>
+   		 	<scope>runtime</scope>
+		</dependency>
 	  </dependencies>
 	</dependencyManagement>
+	
 </project>
