Ajout projet Maven Console Client. Relation et héritage en JPA

--- a/pizzeria-app/boris-pizzeria-model/pom.xml
+++ b/pizzeria-app/boris-pizzeria-model/pom.xml
@@ -16,5 +16,10 @@
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
   	</dependency>
+  	
+  	<dependency>
+		<groupId>org.apache.directory.studio</groupId>
+		<artifactId>org.apache.commons.codec</artifactId>
+	</dependency>
   </dependencies>
 </project>
