--- a/pizzeria-app/boris-pizzeria-console/pom.xml
+++ b/pizzeria-app/boris-pizzeria-console/pom.xml
@@ -10,6 +10,11 @@
   </parent>
   
   <artifactId>boris-pizzeria-console</artifactId>
+  <packaging>jar</packaging>
+  
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   
   <build>
   
