Implementation CDI et EJB

--- a/pizzeria-app/boris-pizzeria-admin-web/pom.xml
+++ b/pizzeria-app/boris-pizzeria-admin-web/pom.xml
@@ -48,6 +48,11 @@
   		<groupId>${project.groupId}</groupId>
   		<artifactId>boris-pizzeria-model</artifactId>
   	</dependency>
+  	
+  	<dependency>
+  		<groupId>${project.groupId}</groupId>
+  		<artifactId>boris-pizzeria-metier</artifactId>
+  	</dependency>
     
   </dependencies>
   <build>
