--- a/pizzeria-app/boris-pizzeria-client/pom.xml
+++ b/pizzeria-app/boris-pizzeria-client/pom.xml
@@ -35,6 +35,10 @@
       <artifactId>junit</artifactId>
     </dependency>
     <dependency>
+		 <groupId>javax</groupId>
+		 <artifactId>javaee-api</artifactId>
+    </dependency>
+    <dependency>
     	<groupId>org.hibernate</groupId>
     	<artifactId>hibernate-entitymanager</artifactId>
     </dependency>
@@ -54,6 +58,10 @@
 		<groupId>org.apache.directory.studio</groupId>
 		<artifactId>org.apache.commons.codec</artifactId>
 	</dependency>
+	<dependency>
+  		<groupId>${project.groupId}</groupId>
+  		<artifactId>boris-pizzeria-metier</artifactId>
+  	</dependency>
   </dependencies>
   <parent>
   	<groupId>formation-dta</groupId>
