--- a/pizzeria-app/boris-pizzeria-dao/pom.xml
+++ b/pizzeria-app/boris-pizzeria-dao/pom.xml
@@ -31,5 +31,13 @@
   		<groupId>mysql</groupId>
   		<artifactId>mysql-connector-java</artifactId>
   	</dependency>
+  	<dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+    </dependency>
+    <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
+    </dependency>
   </dependencies>
 </project>
