--- a/pizzeria-app/pom.xml
+++ b/pizzeria-app/pom.xml
@@ -83,7 +83,17 @@
 		    <scope>provided</scope>
 		</dependency>
 		
-		
+		<dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>2.25</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
+            <version>2.22</version>
+        </dependency>
 		
 	    <dependency>
 	      <groupId>junit</groupId>
