--- a/pizzeria-app/boris-pizzeria-console/pom.xml
+++ b/pizzeria-app/boris-pizzeria-console/pom.xml
@@ -65,6 +65,21 @@
   <dependencies>
   
   	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-test</artifactId>
+  	</dependency>
+  	
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-orm</artifactId>
+  	</dependency>
+  
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-context</artifactId>
+  	</dependency>
+  
+  	<dependency>
 		 <groupId>javax</groupId>
 		 <artifactId>javaee-api</artifactId>
     </dependency>
