--- a/pizzeria-app/boris-pizzeria-dao/pom.xml
+++ b/pizzeria-app/boris-pizzeria-dao/pom.xml
@@ -10,6 +10,11 @@
   <dependencies>
     
     <dependency>
+	    <groupId>org.springframework.data</groupId>
+	    <artifactId>spring-data-jpa</artifactId>
+	</dependency>
+    
+    <dependency>
     	<groupId>org.springframework</groupId>
     	<artifactId>spring-aspects</artifactId>
     </dependency>
