--- a/pizzeria-app/pom.xml
+++ b/pizzeria-app/pom.xml
@@ -17,6 +17,8 @@
 	  	<module>boris-pizzeria-admin-web</module>
 	  	<module>boris-pizzeria-client</module>
 	  	<module>boris-pizzeria-metier</module>
+	  	
+	  	<module>boris-pizzeria-stock-app</module>
 	</modules>
 	
  	<build>
@@ -30,10 +32,10 @@
 					</configuration>
 	 			</plugin>
 	 			<plugin>
-                 <artifactId>maven-war-plugin</artifactId>
-                 <configuration>
-                     <failOnMissingWebXml>false</failOnMissingWebXml>
-                 </configuration>
+	                 <artifactId>maven-war-plugin</artifactId>
+	                 <configuration>
+	                     <failOnMissingWebXml>false</failOnMissingWebXml>
+	                 </configuration>
              </plugin>
 	 		</plugins>
 	 	</pluginManagement>
@@ -53,6 +55,24 @@
 	<dependencyManagement>
 	  <dependencies>
 	 
+	 <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+	<dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-jpa</artifactId>
+        <version>1.10.6.RELEASE</version>
+    </dependency>
+	 
+	 	<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.8.5</version>
+		</dependency>
+	  
+		<dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
 	  
 	  	<dependency>
 	  		<groupId>org.springframework</groupId>
